--- a/angelo.bib
+++ b/angelo.bib
@@ -112,14 +112,35 @@
 	Bdsk-Url-1 = {http://doi.acm.org/10.1145/78952.78953},
 	Bdsk-Url-2 = {https://doi.org/10.1145/78952.78953}}
 
-@inproceedings{hindle-hacking02013,
-	Author = {A.Hindle},
-	Booktitle = {International Conference on New Interfaces for Musical Expression (Fr-2016)},
-	Date-Added = {2018-05-15 04:35:54 +0000},
-	Date-Modified = {2018-05-15 04:40:36 +0000},
-	Organization = {Griffith University, Brisbane},
+@InProceedings{Hindle2016,
 	Title = {Hacking NIMEs},
-	Year = {2013}}
+	Author = {Abram Hindle},
+	Booktitle = {Proceedings of the International Conference on New Interfaces for Musical Expression},
+	Year = {2016},
+	Address = {Brisbane, Australia},
+	Pages = {359--364},
+	Publisher = {Queensland Conservatorium Griffith University},
+	Series = {2220-4806},
+	Volume = {16},
+	Abstract = { NIMEs typically focus on novelty but the cost of novelty is
+	often to
+	ignore other non-functional requirements and concerns such as
+	usability or security. Digital security has probably not been a
+	concern for performers due to the duration of their performances and
+	lack of disrespectful hackers, known as crackers, in attendance
+	carrying the appropriate equipment and software necessary to hack a
+	performance. Yet many modern NIMEs could be hacked from smart-phones
+	in the audience. The lack of security hardening makes NIMEs an easy
+	target --- but a question arises: if hacking can interrupt or modify
+	a performance couldn't hacking itself also be performance? Thus
+	would music hacking, live-hacking, be similar to live-coding? In
+	this paper we discuss how NIMEs are in danger of being hacked, and
+	yet how hacking can be an act of performance too.
+	},
+	ISBN = {978-1-925455-13-7},
+	Track = {Papers},
+	Url = {http://www.nime.org/proceedings/2016/nime2016_paper0070.pdf}
+}
 
 @inproceedings{Lee2014ModelsAO,
 	Author = {Sang Won Lee and Georg Essl},
